--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,113 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.main h1 {
+  margin: 5px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
+.main h3 {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
 }
 
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.headSearch {
+  background-color: #916BBF;
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
+  padding: 1rem;
+}
+
+.search {
+  background-color: transparent;
+  border: 2px solid #3D2C8D;
+  border-radius: 50px;
+  color: #3D2C8D;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+}
+
+.headSearch ::placeholder {
+  color: #3D2C8D;
+}
+
+.search:focus {
+  outline: none;
+}
+
+.movieContainer {
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
 }
 
-.card {
+.movie {
+  background-color: #916BBF;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+  color: white;
   margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  overflow: hidden;
+  position: relative;
+  width: 15rem;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.movie img {
+  width: 100%;
+  height: 360px;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.movieInfo {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
-.card p {
+.movieInfo h3 {
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  padding: 0.1rem;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.movieInfo span {
+  font-weight: bold;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.movieOver {
+  background-color: white;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.1);
+  color: #3D2C8D;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-height: 100%;
+  overflow: auto;
+  transform: translateY(102%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movieOver {
+  transform: translateY(0%);
+}
+
+.green {
+  color: green;
+  border-radius: 3px;
+}
+
+.orange {
+  color: orange;
+  border-radius: 3px;
+}
+
+.red {
+  color: red;
+  border-radius: 3px;
 }
