--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,37 @@
 html,
 body {
+  background-color: #3D2C8D;
+  color: white;
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+span {
+  background-color: #3D2C8D;
+  padding: 0.2rem;
 }
 
-* {
-  box-sizing: border-box;
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #bdbdbd;
+  box-shadow: 0 0 2px grey; 
+}
+
+::-webkit-scrollbar {
+  background: #d6d6d6;
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #916BBF;
 }
